blog4 greeting narrowtext rem

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -117,10 +117,10 @@
                                 <div>
                                     <h4 class="text-center mb-4">Greetings!</h4>
                                     <div class='m-auto' style="max-width: 480px;">
-                                        <div class="h6 narrowText">
+                                        <div class="h6">
                                             During week 4 of my <span style="color:white;">MIT xPro Coding Bootcamp</span>, I spent a lot of time on my portfolio.
                                         </div>
-                                        <div class="h6 narrowText">
+                                        <div class="h6">
                                             I liked the 'Typewriter' CSS animation and wanted to customize it and propogate it strategically throughout my portfolio.  Here's the example I followed from 
                                             <a href="https://codepen.io/evirunurm/pen/MWOQoyO" target="_blank">CodePen</a>.  There were some challanges along the way...
                                         </div>
