--- a/pages/blog.html
+++ b/pages/blog.html
@@ -176,7 +176,7 @@
                                     <a href="../pics/typewriter/typewriterCSS4.png" target="_blank"><img src="../pics/typewriter/typewriterCSS4.png" class="img-fluid m-auto" alt="Screnshot of CSS showing 'Typewriter' rows 1 - 5."></a>
                                 </div>
                             </div>
-                            <div class="d-none d-sm-block d-md-none">
+                            <div class="d-block d-sm-block d-md-none">
                                 <p>Image 4 shows the properties for the <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements" target="_blank">pseudo-elements</a> '<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::before" target="_blank">:before</a>' and '<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::after" target='_blank'>:after</a>.' Image 5 shows using the 'write' and 'blink' <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/animation" target="_blank">animations</a> for the aforementioned pseudo-elements.  Note that the 'steps' matched the character length of the row.</p>
                             </div>
                             <div class="col-sm-2 d-sm-none d-md-none">
