blog4 narrowtext img4 text

--- a/pages/blog.html
+++ b/pages/blog.html
@@ -177,7 +177,7 @@
                                 </div>
                             </div>
                             <div class="d-block d-sm-block d-md-none">
-                                <p>Image 4 shows the properties for the <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements" target="_blank">pseudo-elements</a> '<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::before" target="_blank">:before</a>' and '<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::after" target='_blank'>:after</a>.' Image 5 shows using the 'write' and 'blink' <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/animation" target="_blank">animations</a> for the aforementioned pseudo-elements.  Note that the 'steps' matched the character length of the row.</p>
+                                <p class="narrowText">Image 4 shows the properties for the <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/Pseudo-elements" target="_blank">pseudo-elements</a> '<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::before" target="_blank">:before</a>' and '<a href="https://developer.mozilla.org/en-US/docs/Web/CSS/::after" target='_blank'>:after</a>.' Image 5 shows using the 'write' and 'blink' <a href="https://developer.mozilla.org/en-US/docs/Web/CSS/animation" target="_blank">animations</a> for the aforementioned pseudo-elements.  Note that the 'steps' matched the character length of the row.</p>
                             </div>
                             <div class="col-sm-2 d-sm-none d-md-none">
                                 <h6>Image 4</h6>
