welcome card wordsmith

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -102,7 +102,7 @@
                     <h5 class="card-title" style="color:cornflowerblue">Passionate About Code</h5>
                     <p class="card-text">Degree in Biological Sciences</p>
                     <p class="card-text">20 year Pharmaceutical Professional</p>
-                    <p class="card-text">Full Stack MERN Developer<span style="color:gray"> (in progress, Jul 2022)</span></p>
+                    <p class="card-text">Full Stack Coding Bootcamp<span style="color:gray"> (in progress, Jul 2022)</span></p>
                     <div class="btnContainer mt-3">
                         <a href="../pages/about.html" class="btn btn-secondary">About Me</a>
                         <a href="../pages/contact.html" class="btn btn-secondary btnRepo" target="_blank">Contact</a>
