textarea placeholder wordsmith

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -128,7 +128,7 @@
             <form class='' action="https://formsubmit.co/f61adf2ff38bc5c4deb30cb261bf1ec0" method="POST">
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Name: </label>
-                    <input class='col-sm-10' type="text" name='name' placeholder='Enter name here' required>
+                    <input class='col-sm-10' type="text" name='name' placeholder='Enter name' required>
                 </div>
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Email:</label>
@@ -136,7 +136,7 @@
                 </div>
                 <div class='form-item row'>
                     <label class='col-sm-2' for="">Message:</label>
-                    <textarea class='col-sm-10' name="message" cols="30" rows="5" placeholder="Just say 'Hello!' Do you need help with a project?" required></textarea>
+                    <textarea class='col-sm-10' name="message" cols="30" rows="5" placeholder="Let me know you visited! Need help with a project?" required></textarea>
                 </div>
                 <input type="hidden" name="_subject" value="New codeByPete Inquiry!">
                 <input type="hidden" name="_template" value="basic">
