--- a/pages/contact.html
+++ b/pages/contact.html
@@ -83,7 +83,7 @@
         <img src="../pics/about/crushItApple.jpg" class='img-fluid' alt="Core Nutritionals logo with Apple logo glowing behind.">
     </div>
 
-    <div class="container-fluid myArticles row">
+    <div class="container-fluid myArticles row mt-4">
         <div class="text-center">
             <h1 style="color:darkorchid">Let's Connect!</h1>
             <h5 style="color:gray;">Interested in code?</h5>
@@ -113,11 +113,6 @@
             </div>
         </div>
         
-        
-            <!-- <div class="d-flex gap-3">
-                <a href="https://goo.gl/maps/zvaZenYgiZJq4MrD7" target="_blank"><img class='img-fluid contactLogo' src="../pics/contact/locationIcon.gif" alt="Location Icon"></a>
-                <h6 class="my-auto">Philadelphia, PA USA</h6>
-            </div> -->
     </div>
 
     <div id='contact' class='myArticles container-fluid mt-4'>
