welcome card shuffle card pic mt media

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -96,16 +96,15 @@
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/about/crushItApple.jpg" class="card-img-top mx-auto py-4" alt="Pac Man image"
+                <img src="../pics/about/mitxPro_logoStacked.jpg" class="card-img-top mx-auto" alt="Pac Man image"
                     style="width:10rem;">
                 <div class="card-body">
-                    <h5 class="card-title" style="color:cornflowerblue">Passionate About Code</h5>
-                    <p class="card-text">Degree in Biological Sciences</p>
-                    <p class="card-text">20 year Pharmaceutical Professional</p>
-                    <p class="card-text">Full Stack Coding Bootcamp<span style="color:gray"> (in progress, Jul 2022)</span></p>
+                    <h5 class="card-title" style="color:cornflowerblue">See My Work</h5>
+                    <p class="card-text">Demo projects or view source code on GitHub.</p>
+                    <p class="card-text">Read blog articles about my Coding Bootcamp experience.</p>
                     <div class="btnContainer mt-3">
-                        <a href="../pages/about.html" class="btn btn-secondary">About Me</a>
-                        <a href="../pages/contact.html" class="btn btn-secondary btnRepo" target="_blank">Contact</a>
+                        <a href="../pages/projects.html" class="btn btn-secondary">Projects</a>
+                        <a href="../pages/blog.html" class="btn btn-secondary btnRepo">My Blog</a>
                     </div>
                 </div>
             </div>
@@ -131,18 +130,20 @@
             </div>
 
             <div class="card col-sm-4" style="width: 18rem;">
-                <img src="../pics/about/mitxPro_logoStacked.jpg" class="card-img-top mx-auto py-3" alt="Pac Man image"
+                <img src="../pics/about/crushItApple.jpg" class="card-img-top mx-auto" alt="Pac Man image"
                     style="width:10rem;">
                 <div class="card-body">
-                    <h5 class="card-title" style="color:cornflowerblue">See My Work</h5>
-                    <p class="card-text">Demo projects or view source code on GitHub.</p>
-                    <p class="card-text">Read blog articles about my Coding Bootcamp experience.</p>
+                    <h5 class="card-title" style="color:cornflowerblue">Passionate About Code</h5>
+                    <p class="card-text">Degree in Biological Sciences</p>
+                    <p class="card-text">20 year Pharmaceutical Professional</p>
+                    <p class="card-text">Full Stack Coding Bootcamp<span style="color:gray"> (in progress, Jul 2022)</span></p>
                     <div class="btnContainer mt-3">
-                        <a href="../pages/projects.html" class="btn btn-secondary">Projects</a>
-                        <a href="../pages/blog.html" class="btn btn-secondary btnRepo">My Blog</a>
+                        <a href="../pages/about.html" class="btn btn-secondary">About Me</a>
+                        <a href="../pages/contact.html" class="btn btn-secondary btnRepo" target="_blank">Contact</a>
                     </div>
                 </div>
             </div>
+
         </div>
 
     </section>
