--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -94,11 +94,11 @@
             <div class="text-center mb-4">
                 <h5 class='menloRegular' style="color:white;">Join me, on <a href="../pages/blog.html">myCodingJourney</a>...</h5>
             </div>
-            
+
             <div class="card col-sm-4" style="width: 18rem;">
                 <!-- <img src="../pics/about/mitxPro_logoStacked.jpg" class="card-img-top mx-auto" alt="MIT xPro Image"
                     style="width:10rem;"> -->
-                    <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/XUP2zCFXhB0" frameborder="0" allowfullscreen>
+                    <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/cJSNeK_0bmw" frameborder="0" allowfullscreen>
                     </iframe>
                 <div class="card-body">
                     <h5 class="card-title" style="color:cornflowerblue">See My Work</h5>
