yt vid link update

--- a/pages/welcome.html
+++ b/pages/welcome.html
@@ -98,7 +98,7 @@
             <div class="card col-sm-4" style="width: 18rem;">
                 <!-- <img src="../pics/about/mitxPro_logoStacked.jpg" class="card-img-top mx-auto" alt="MIT xPro Image"
                     style="width:10rem;"> -->
-                    <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/cJSNeK_0bmw" frameborder="0" allowfullscreen>
+                    <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/L2MLboXUkUA" frameborder="0" allowfullscreen>
                     </iframe>
                 <div class="card-body">
                     <h5 class="card-title" style="color:cornflowerblue">See My Work</h5>
