--- a/pages/projects.html
+++ b/pages/projects.html
@@ -87,11 +87,28 @@
     <div id='myProjects' class="row container-fluid justify-content-center">
 
         <div class="card col-sm-4" style="width: 18rem;">
+            <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/JywuU_yC3PE" frameborder="0" allowfullscreen>
+            </iframe>
+            <div class="card-body">
+                <h5 class="card-title">Pac-Men Factory</h5>
+                <p class="card-text">This is my Week 5 project with the <a href="https://xpro.mit.edu/"
+                        target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
+                    and JavaScript.</p>
+                <p class="card-text">Custom features were added on top of the base project, see video or <a href="https://github.com/codeTrackLift/pacmen_factory" target="_blank">readme</a> for details.
+                <div class="btnContainer">
+                    <a href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary" target="_blank">Try Demo</a>
+                    <a href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
+                        target="'_blank">View Code</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card col-sm-4" style="width: 18rem;">
             <img src="../pics/pacman/pacman_minigame.png" class="card-img-top mx-auto py-4" alt="Pac Man image"
                 style="width:10rem;">
             <div class="card-body">
                 <h5 class="card-title">Pac-Man Mini-Game</h5>
-                <p class="card-text">This is my first project with the <a href="https://xpro.mit.edu/"
+                <p class="card-text">This is my Week 3 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
                     and JavaScript.</p>
                 <p class="card-text">This 'mini-game' accepts keyboard, mouse, and mobile screen inputs! See <a
