--- a/pages/projects.html
+++ b/pages/projects.html
@@ -90,7 +90,7 @@
             <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/JywuU_yC3PE" frameborder="0" allowfullscreen>
             </iframe>
             <div class="card-body">
-                <h5 class="card-title">Pac-Men Factory</h5>
+                <h5 class="card-title">Aqua-PacMan Factory</h5>
                 <p class="card-text">This is my Week 5 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
                     and JavaScript.</p>
