--- a/pages/projects.html
+++ b/pages/projects.html
@@ -126,12 +126,8 @@
             <img src="../pics/mermaid_camera.gif" class="card-img-top py-2" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Photographer Landingpage</h5>
-                <p class="card-text">Built <span>landingpage</span> <a href="https://www.lmnophoto.biz"
-                        target="_blank">lmnophoto.biz</a> for a Photographer who specializes in weddings and events!</p>
-                <p class="card-text">This was my <span>first website</span> using <a
-                        href="https://getbootstrap.com/docs/5.1/getting-started/introduction/"
-                        target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/"
-                        target="_blank">ScrollMagic</a>.</p>
+                <p class="card-text">Need a photography session in the Philadelphia / King of Prussia area?</p>
+                <p class="card-text"><a href="https://www.lmnophoto.biz" target="_blank">LMNOPhoto.biz</a> was my first freelance project and was completed using <a href="https://getbootstrap.com/docs/5.1/getting-started/introduction/" target="_blank">Bootstrap</a> and <a href="https://scrollmagic.io/" target="_blank">ScrollMagic</a>.</p>
                 <div class="btnContainer">
                     <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
                     <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
