--- a/pages/projects.html
+++ b/pages/projects.html
@@ -87,6 +87,21 @@
     <div id='myProjects' class="row container-fluid justify-content-center">
 
         <div class="card col-sm-4" style="width: 18rem;">
+            <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto py-4" alt="Animated head image" style="width:12rem;">
+            <div class="card-body">
+                <h5 class="card-title">Eye Movement</h5>
+                <p class="card-text">This another my Week 5 project with the <a href="https://xpro.mit.edu/"
+                        target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
+                <p class="card-text">Custom features were added on top of the base project, see video or <a href="https://github.com/codeTrackLift/eyemovement" target="_blank">readme</a> for details.
+                <div class="btnContainer">
+                    <a href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary" target="_blank">Try Demo</a>
+                    <a href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
+                        target="'_blank">View Code</a>
+                </div>
+            </div>
+        </div>
+
+        <div class="card col-sm-4" style="width: 18rem;">
             <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/JywuU_yC3PE" frameborder="0" allowfullscreen>
             </iframe>
             <div class="card-body">
@@ -104,8 +119,8 @@
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <img src="../pics/pacman/pacman_minigame.png" class="card-img-top mx-auto py-4" alt="Pac Man image"
-                style="width:10rem;">
+            <img src="../pics/pacman/pacmanMiniGame.gif" class="card-img-top mx-auto py-4" alt="Pac Man image"
+                style="width:8rem;">
             <div class="card-body">
                 <h5 class="card-title">Pac-Man Mini-Game</h5>
                 <p class="card-text">This is my Week 3 project with the <a href="https://xpro.mit.edu/"
