--- a/pages/projects.html
+++ b/pages/projects.html
@@ -90,7 +90,7 @@
             <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto py-4" alt="Animated head image" style="width:12rem;">
             <div class="card-body">
                 <h5 class="card-title">Eye Movement</h5>
-                <p class="card-text">This another my Week 5 project with the <a href="https://xpro.mit.edu/"
+                <p class="card-text">This another Week 5 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
                 <p class="card-text">Custom features were added on top of the base project, see video or <a href="https://github.com/codeTrackLift/eyemovement" target="_blank">readme</a> for details.
                 <div class="btnContainer">
