--- a/pages/projects.html
+++ b/pages/projects.html
@@ -90,22 +90,23 @@
             <img src="../pics/projects/animatedHead.gif" class="card-img-top mx-auto py-4" alt="Animated head image" style="width:12rem;">
             <div class="card-body">
                 <h5 class="card-title">Eye Movement</h5>
-                <p class="card-text">This another Week 5 project with the <a href="https://xpro.mit.edu/"
+                <p class="card-text">Another Week 5 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS, and JavaScript.</p>
                 <p class="card-text">Custom features were added on top of the base project, see video or <a href="https://github.com/codeTrackLift/eyemovement" target="_blank">readme</a> for details.
                 <div class="btnContainer">
                     <a href="https://codetracklift.github.io/eyemovement/" class="btn btn-secondary" target="_blank">Try Demo</a>
                     <a href="https://github.com/codeTrackLift/eyemovement" class="btn btn-secondary btnRepo "
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
-            <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/JywuU_yC3PE" frameborder="0" allowfullscreen>
-            </iframe>
+            <!-- <iframe class='container-fluid ratio ratio-1x1 pt-4' src="https://youtube.com/embed/JywuU_yC3PE" frameborder="0" allowfullscreen>
+            </iframe> -->
+            <img src="../pics/pacman/aquaPacMan.gif" class="card-img-top mx-auto pt-4" alt="Aqua-PacMan animated gif." style="width:12rem;">
             <div class="card-body">
-                <h5 class="card-title">Aqua-PacMan Factory</h5>
+                <h5 class="card-title">PacMan Factory</h5>
                 <p class="card-text">This is my Week 5 project with the <a href="https://xpro.mit.edu/"
                         target="_blank">MIT xPro</a> <span>Coding Bootcamp</span> and was coded with vanilla HTML, CSS,
                     and JavaScript.</p>
@@ -113,14 +114,14 @@
                 <div class="btnContainer">
                     <a href="https://codetracklift.github.io/pacmen_factory/" class="btn btn-secondary" target="_blank">Try Demo</a>
                     <a href="https://github.com/codeTrackLift/pacmen_factory" class="btn btn-secondary btnRepo "
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
 
         <div class="card col-sm-4" style="width: 18rem;">
             <img src="../pics/pacman/pacmanMiniGame.gif" class="card-img-top mx-auto py-4" alt="Pac Man image"
-                style="width:8rem;">
+                style="width:10rem;">
             <div class="card-body">
                 <h5 class="card-title">Pac-Man Mini-Game</h5>
                 <p class="card-text">This is my Week 3 project with the <a href="https://xpro.mit.edu/"
@@ -132,7 +133,7 @@
                     <a href="https://codetracklift.github.io/pacman/" class="btn btn-secondary" target="_blank">Play
                         Game</a>
                     <a href="https://github.com/codeTrackLift/pacman" class="btn btn-secondary btnRepo "
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
@@ -146,7 +147,7 @@
                 <div class="btnContainer">
                     <a href="https://www.lmnophoto.biz/" class="btn btn-secondary" target="_blank">Visit Site</a>
                     <a href="https://github.com/codeTrackLift/lmnophoto" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
@@ -163,7 +164,7 @@
                     <a href="https://codetracklift.github.io/odin-calc/" class="btn btn-secondary" target="_blank">Try
                         Demo</a>
                     <a href="https://github.com/codeTrackLift/odin-calc" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
@@ -180,7 +181,7 @@
                     <a href="https://codetracklift.github.io/etch-a-sketch/" class="btn btn-secondary"
                         target="_blank">Try Demo</a>
                     <a href="https://github.com/codeTrackLift/etch-a-sketch" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
@@ -198,7 +199,7 @@
                     <a href="https://codetracklift.github.io/rock-paper-scissors/" class="btn btn-secondary"
                         target="'_blank">Play Game</a>
                     <a href="https://github.com/codeTrackLift/rock-paper-scissors" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
@@ -219,7 +220,7 @@
                     <a href="https://codetracklift.github.io/odin-landingpage/" class="btn btn-secondary"
                         target="'_blank">Visit Site</a>
                     <a href="https://github.com/codeTrackLift/odin-landingpage" class="btn btn-secondary btnRepo"
-                        target="'_blank">View Code</a>
+                        target="'_blank">View Repo</a>
                 </div>
             </div>
         </div>
